consider ranking in ranking stats
